Fix the layout of the page
The problem with the layout was that, when the window is resized,
contents didn't shrink properly, ending up making the page look weird
with some contents being cut out of view. The modifications made here
should improve the quality of the page overall, as some contents shrink
properly.

--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ body {
     background: #1F2937;
     color: #E5E7EB;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+}
+
+.header.two {
     padding: 0 0 120px;
-    align-items: center;
 }
 
 .logo-links {
@@ -79,8 +81,10 @@ button {
 
 .information {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+}
+
+.information.two {
     padding: 0 0 120px;
 }
 
